--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.9.0",
+    "@codemirror/lang-cpp": "^6.0.3",
+    "@codemirror/lang-java": "^6.0.2",
+    "@codemirror/lang-javascript": "github:codemirror/lang-javascript",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.5",
+    "@monaco-editor/react": "^4.7.0",
     "@types/ace": "^0.0.52",
     "@types/dompurify": "^3.0.5",
     "ace-builds": "^1.32.7",
-    "axios": "^1.7.2",
-    "dompurify": "^3.0.9",
+    "axios": "^1.12.2",
+    "codemirror": "^6.0.2",
+    "dompurify": "^3.2.7",
+    "monaco-themes": "^0.4.7",
     "react": "^18.2.0",
-    "react-ace": "^10.1.0",
+    "react-ace": "^14.0.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "rehype-raw": "^7.0.0",
     "socket.io-client": "^4.8.1"
