ui changes- background and colors changed , navbar , header layout changed

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.12.2",
     "codemirror": "^6.0.2",
     "dompurify": "^3.2.7",
+    "lucide-react": "^0.545.0",
     "monaco-themes": "^0.4.7",
     "react": "^18.2.0",
     "react-ace": "^14.0.1",
