--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.5",
+    "@lottiefiles/dotlottie-react": "^0.17.5",
     "@monaco-editor/react": "^4.7.0",
     "@types/ace": "^0.0.52",
     "@types/dompurify": "^3.0.5",
